objects/copado__Test__c.object
<CustomObject>
    <description>Copado Object to spin a test scenario</description>
    <fields>
        <fullName>copado__AcceptanceCriteria__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Configuration__c</fullName>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__ExtensionConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The displayed values are based on the active Extension Configuration records available in your org.</inlineHelpText>
        <label>Tool Configuration</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>copado__ExtensionConfiguration__c.copado__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>copado__ExtensionConfiguration__c.copado__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>ChildTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__HasExtraConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internally used to dynamically display the Test Definition tab, visible only if there are one or more UISection__mdt related records.</description>
        <label>Has Extra Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__LatestJobExecution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Reference__c</fullName>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready for Test</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <formula>copado__ExtensionConfiguration__r.copado__TestType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__ExtensionConfiguration__c</columns>
        <columns>copado__Reference__c</columns>
        <columns>copado__User_Story__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>